     * 'xdpmode' option for netdev-afxdp renamed to 'xdp-mode'.
       Modes also updated.  New values:
         native-with-zerocopy  - former DRV
         native                - new one, DRV without zero-copy
         generic               - former SKB
         best-effort [default] - new one, chooses the best available from
                                 3 above modes
   - DPDK:
     * DPDK pdump packet capture support disabled by default. New configure
       option '--enable-dpdk-pdump' to enable it.
     * DPDK pdump support is deprecated and will be removed in next releases.
     * DPDK ring ports (dpdkr) are deprecated and will be removed in next
       releases.
     * Add support for DPDK 19.11.
     * Add hardware offload support for output, drop, set of MAC, IPv4 and
       TCP/UDP ports actions (experimental).
     * Add experimental support for TSO.
   - RSTP:
     * The rstp_statistics column in Port table will only be updated every
       stats-update-interval configured in Open_vSwitch table.
   - OVSDB:
     * When ovsdb-server is running in backup mode, the default value of probe
       interval is increased to 60 seconds for the connection to the
       replication server. This value is configurable with the unixctl
       command - ovsdb-server/set-active-ovsdb-server-probe-interval.
     * ovsdb-server: New OVSDB extension to allow clients to specify row UUIDs.
   - 'ovs-appctl dpctl/dump-flows' can now show offloaded=partial for
     partially offloaded flows, dp:dpdk for fully offloaded by dpdk, and
     type filter supports new filters: "dpdk" and "partially-offloaded".
   - Add new argument '--offload-stats' for command
     'ovs-appctl bridge/dump-flows',
     so it can display offloaded packets statistics.

v2.12.0 - 03 Sep 2019
---------------------
   - DPDK:
     * New option 'other_config:dpdk-socket-limit' to limit amount of
       hugepage memory that can be used by DPDK.